--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <div class="header_left">
           <ul class="left-menu  ">
       <li><a class="name   ">Music Lover</a></li>
-      <li><a href="#">Trang chủ</a></li>
-      <li><a href="#">Sản phẩm</a></li>
-     <li> <a href="#">Giới thiệu</a></li>
-   <li>   <a href="#">Liên hệ</a></li>
+      <li><a class="menu-size" href="#">Trang chủ</a></li>
+      <li><a class="menu-size" href="#">Sản phẩm</a></li>
+     <li> <a class="menu-size" href="#">Giới thiệu</a></li>
+   <li>   <a class="menu-size" href="#">Liên hệ</a></li>
     </ul>
     </div>
     <div class = "header_right">
       <ul class = "right-menu">
-        <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-        <li><a href=""><i class="fa-regular fa-circle-user"></i>
+        <li ><a class="menu-size menu-icon" href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+        <li><a class="menu-size menu-icon" href=""><i class="fa-regular fa-circle-user"></i>
         </a></li>
-        <li><a href=""><i class="fa-solid fa-cart-shopping"></i>
+        <li><a class="menu-size menu-icon" href=""><i class="fa-solid fa-cart-shopping"></i>
         </a></li>
       </ul>
     </div>
